# fastq-agent-system

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  pyproject.toml
my_reports/: fastq_analysis_20250904_160930.html
reports/: fastq_analysis_20250708_115114.html  fastq_analysis_20250708_115502.html  fastq_analysis_20250708_115621.html
scripts/: check_version_consistency.py
src/fastq_agents/: __init__.py  cli.py
src/fastq_agents/agents/: __init__.py  base.py  decorators.py  parser.py  reporter.py
src/fastq_agents/models/: fastq_data.py  reports.py
src/fastq_agents/templates/: report_template.html
test_output/: fastq_analysis_20251106_123412.json  fastq_analysis_20251106_123438.html  fastq_analysis_20251106_182706.json
tests/fixtures/: sample.fastq
